updated Italian translation

--- a/po/wesnoth/it.po
+++ b/po/wesnoth/it.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-31 10:45+0200\n"
-"PO-Revision-Date: 2012-03-05 15:56+0100\n"
+"PO-Revision-Date: 2012-04-02 19:46+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -2431,7 +2431,7 @@ msgid ""
 "a unit in. Placing units wisely can sometimes let you reach a village a turn "
 "earlier."
 msgstr ""
-"Puoi accedere ai comandi <b>Recluta</b> e <b>richiama</b> facendo clic col "
+"Puoi accedere ai comandi <b>recluta</b> e <b>richiama</b> facendo clic col "
 "tasto destro su una casella di tipo castello. Ciò ti permette di decidere su "
 "quale esagono mettere la nuova unità. Se posizioni le unità in modo oculato "
 "a volte puoi guadagnare un villaggio icon un turno di anticipo."
@@ -5203,16 +5203,12 @@ msgid "prompt^Command:"
 msgstr "Comando:"
 
 #: src/mouse_events.cpp:703
-#, fuzzy
-#| msgid ""
-#| "You cannot move your leader away from the keep with some planned recruits "
-#| "left."
 msgid ""
 "You cannot move your leader away from the keep with some planned recruits or "
 "recalls left."
 msgstr ""
-"Non puoi spostare il condottiero dalla fortezza con dei reclutamenti "
-"pianificati da fare."
+"Non puoi spostare il condottiero dalla fortezza se hai reclutamenti o "
+"richiami pianificati da fare."
 
 #: src/mouse_events.cpp:834 src/mouse_events.cpp:914
 msgid "Attack Enemy"
