--- a/po/wesnoth/zh_CN.po
+++ b/po/wesnoth/zh_CN.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-31 10:45+0200\n"
-"PO-Revision-Date: 2012-02-19 14:00+0800\n"
+"PO-Revision-Date: 2012-04-04 18:49+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Chinese Simplified <http://code.google.com/p/wesnoth-"
 "translation-cn>\n"
@@ -5044,14 +5044,10 @@ msgid "prompt^Command:"
 msgstr "命令："
 
 #: src/mouse_events.cpp:703
-#, fuzzy
-#| msgid ""
-#| "You cannot move your leader away from the keep with some planned recruits "
-#| "left."
 msgid ""
 "You cannot move your leader away from the keep with some planned recruits or "
 "recalls left."
-msgstr "在有招募计划剩余的情况下，您不能将您的领袖移动到主楼之外。"
+msgstr "在有剩余的征募或者召回计划时，您不能将领袖移动到主楼之外。"
 
 #: src/mouse_events.cpp:834 src/mouse_events.cpp:914
 msgid "Attack Enemy"
