updated German translation

--- a/po/wesnoth-tutorial/de.po
+++ b/po/wesnoth-tutorial/de.po
@@ -6,11 +6,11 @@
 #  Tobias 'SonIcco' Schönau <tobias.schoenau@eagerbyte.com>, 2009
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.8\n"
+"Project-Id-Version: Battle for Wesnoth 1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-21 01:34+0100\n"
-"PO-Revision-Date: 2012-01-19 20:08+0100\n"
-"Last-Translator: Gerfried Fuchs <rhonda@deb.at>\n"
+"POT-Creation-Date: 2012-01-22 15:00+0100\n"
+"PO-Revision-Date: 2012-04-04 19:48+0100\n"
+"Last-Translator: Christoph Berg <Christoph.Berg@kpm-sport.de>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -373,7 +373,7 @@ msgstr ""
 #. [event]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:496
 msgid "Click on the <b>End Turn</b> button in the bottom right of the screen"
-msgstr "Klickt unten rechts am Schirm auf den <b>Zug beenden</b>-Knopf"
+msgstr "Klickt unten rechts am Bildschirm auf den <b>Zug beenden</b>-Knopf"
 
 #. [message]: id=student
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:517
@@ -434,8 +434,8 @@ msgid ""
 "own."
 msgstr ""
 "Ihr habt ein Dorf erobert! Es lässt nun Eure Flagge wehen und wurde zu der "
-"Gesamtzahl Eurer Dörfern hinzugefügt. (Das Haus-Symbol oben am Bildrand "
-"zeigt, wieviele Dörfer ihr derzeit kontrolliert.) Dörfer geben Euch die "
+"Gesamtzahl Eurer Dörfer hinzugefügt. (Das Haus-Symbol am oberen Bildrand "
+"zeigt, wie viele Dörfer Ihr derzeit kontrolliert.) Dörfer geben Euch die "
 "Einnahmen, die für das Rekrutieren von Einheiten notwendig sind. Pro Zug "
 "erhaltet Ihr grundsätzlich zwei Goldstücke, sowie für jedes Dorf in Eurem "
 "Besitz zusätzlich ein Goldstück."
@@ -550,8 +550,8 @@ msgstr ""
 "Neu ausgebildete Einheiten können in der Runde, in der sie ausgebildet "
 "wurden, nichts mehr tun; Ihr könnt ihnen erst in der nächsten Runde Befehle "
 "erteilen.\n"
-"Nach diesem Dialog könnt Ihr den Mauszeiger über eine Einheit bewegen, um "
-"rechts am Schirm eine Zusammenfassung ihrer Fähigkeiten zu erhalten."
+"Nach diesem Dialog könnt Ihr den Mauszeiger über eine Einheit bewegen, um am "
+"rechten Bildrand eine Zusammenfassung ihrer Fähigkeiten zu erhalten."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:704
@@ -676,13 +676,13 @@ msgid ""
 "You should tell the other elf to use the bow."
 msgstr ""
 "\n"
-"Du solltest dem anderem Elfen mitteilen, den Bogen zu benutzen."
+"Du solltest dem anderen Elf mitteilen, den Bogen zu benutzen."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:884
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:933
 msgid "Attack with the other elf"
-msgstr "Greift mit dem anderem Elfen an"
+msgstr "Greift mit dem anderem Elf an"
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:913
@@ -702,13 +702,13 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:952
 msgid "Keep attacking with both elves until the quintain is finished!"
 msgstr ""
-"Setze den Kampf mit beiden Elfen solange fort, bis die Turnierpuppe besiegt "
+"Setze den Kampf mit beiden Elfen so lange fort, bis die Turnierpuppe besiegt "
 "ist!"
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:966
 msgid "Maybe you should recruit another elf?"
-msgstr "Vielleicht solltest du einen weiteren Elfen ausbilden?"
+msgstr "Vielleicht solltest du einen weiteren Elf ausbilden?"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:970
@@ -793,12 +793,12 @@ msgid ""
 msgstr ""
 "Wann auch immer Ihr eine Eurer Einheit ausgewählt habt, seht Ihr sich "
 "ändernde Prozentzahlen, während Ihr die Maus über die Karte bewegt. Je höher "
-"die Prozentzahl ist desto besser kann sich die Einheit in dieser Feldart "
+"die Prozentzahl ist, desto besser kann sich die Einheit in dieser Feldart "
 "<i>verteidigen</i>. Zum Beispiel können sich die meisten Einheiten in Burgen "
 "und Dörfern gut verteidigen, in Flüssen hingegen jedoch schlecht. Die "
 "Angriffe der Puppen jedoch sind <i>magisch</i>, daher haben sie eine "
-"Wahrscheinlichkeit von 70% Euch zu treffen, unabhängig in welchem Gebiet Ihr "
-"Euch befindet."
+"Wahrscheinlichkeit von 70% Euch zu treffen, unabhängig vom Gebiet, in "
+"welchem Ihr Euch befindet."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:1074
@@ -877,7 +877,7 @@ msgid ""
 "on the next scenario in the campaign."
 msgstr ""
 "Nach Eurem Sieg werdet Ihr sehen, wie die Karte ausgegraut wird, um "
-"anzuzeigen, dass diese Szenario beendet ist. Hier könnt Ihr noch einmal den "
+"anzuzeigen, dass dieses Szenario beendet ist. Hier könnt Ihr noch einmal den "
 "Zustand Eurer Truppen und der gegebenenfalls überlebenden gegnerischen "
 "Einheiten begutachten. Dies wird <i>Abklingmodus</i> genannt. Wenn Ihr damit "
 "fertig seid, wählt den »Szenario beenden«-Knopf, um in das folgende Szenario "
@@ -1258,7 +1258,7 @@ msgid ""
 "cost you 5 gold in upkeep, leaving you 3 gold poorer per turn. You need more "
 "income."
 msgstr ""
-"Während sich keine deiner rekrutierten Einheit bewegen kann, ist es dir "
+"Obwohl sich keine deiner rekrutierten Einheit bewegen kann, ist es dir "
 "selbst immer noch möglich. Deine fünf Einheiten kosten dich 5 Goldstücke "
 "Unterhalt, was dich in jedem Zug 3 Goldstücke kosten würde. Du benötigst "
 "mehr Einkommen."
@@ -1428,7 +1428,7 @@ msgid ""
 "You’ve captured all the villages around the keep, but stay near so you can "
 "recruit more units."
 msgstr ""
-"Ihr habt alle Dörfer nahe des Burgfrieds eingenommen, aber lasst Euren "
+"Ihr habt alle Dörfer nahe dem Burgfried eingenommen, aber lasst Euren "
 "Anführer in der Nähe, damit Ihr weitere Einheiten rekrutieren könnt."
 
 #. [event]
@@ -1485,9 +1485,8 @@ msgid ""
 "Excellent. Elves are well-protected in the forest. There’s only a 30% chance "
 "of hitting an Elvish Archer in that tile."
 msgstr ""
-"Ausgezeichnet. Elfen sind im Wald gut geschützt. Es gibt nur eine 30%ige "
-"Wahrscheinlichkeit, dass ein Elfenbogenschütze auf diesem Feld getroffen "
-"wird."
+"Ausgezeichnet. Elfen sind im Wald gut geschützt. Elfenbogenschützen werden "
+"auf diesem Feld nur mit einer Wahrscheinlichkeit von 30% getroffen."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1001
@@ -1497,8 +1496,8 @@ msgid ""
 "Cancel!"
 msgstr ""
 "Es ist sehr gefährlich, im Wasser zu stehen, wenn Feinde in der Nähe sind! "
-"Deine Einheit werden eine 80% Wahrscheinlichkeit besitzen, getroffen zu "
-"werden, wenn der Ork zurückschlägt! Abbrechen!"
+"Deine Einheit wird mit einer Wahrscheinlichkeit von 80% getroffen werden, "
+"wenn der Ork zurückschlägt! Abbrechen!"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1007
@@ -1650,7 +1649,7 @@ msgid ""
 msgstr ""
 "Keine anderen Einheiten können den Ork erreichen. Ich hoffe, mein $unit."
 "language_name überlebt den Gegenangriff! Ich nehme besser weitere Dörfer ein "
-"und lasse meine übrigen Einheiten weiter auf den Gegner zu marschieren."
+"und lasse meine übrigen Einheiten weiter auf den Gegner zumarschieren."
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1139
@@ -1683,8 +1682,8 @@ msgid ""
 "attack you!"
 msgstr ""
 "Es ist sehr gefährlich, sich im Wasser aufzuhalten, wenn Feinde in der Nähe "
-"sind! Es besteht eine 80%ige Wahrscheinlichkeit, dass deine Soldaten "
-"getroffen werden! Brich ab und warte darauf, dass sie dich angreifen!"
+"sind! Deine Einheit wird mit einer Wahrscheinlichkeit von 80% getroffen "
+"werden! Brich ab und warte darauf, dass sie dich angreifen!"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1209
@@ -1781,9 +1780,9 @@ msgid ""
 "end your turn."
 msgstr ""
 "\n"
-"Ihr könnt sicher stellen, dass Ihr alle Einheiten für diese Runde gezogen "
+"Ihr könnt sicherstellen, dass Ihr alle Einheiten für diese Runde gezogen "
 "habt, indem Ihr <b>n</b> drückt, um eine Einheit nach der anderen "
-"auszuwählen. Drückt die <b>Leertaste</b>, um erkennen zu geben, dass die "
+"auszuwählen. Drückt die <b>Leertaste</b>, um erkennenzugeben, dass die "
 "aktuell gewählte Einheit nichts mehr tun wird, was verhindert, dass Ihr sie "
 "später irrtümlich bewegt. Wenn »n« keine weitere Einheit auswählt, könnt Ihr "
 "Euren Zug sicher beenden."
@@ -1803,7 +1802,7 @@ msgid ""
 msgstr ""
 "\n"
 "In diesem Szenario müsst Ihr einzig den Orkhäuptling besiegen, um zu "
-"gewinnen. (Die Siegesbedingungen sind untern den <b>Missionszielen</b> im "
+"gewinnen. (Die Siegesbedingungen sind unter den <b>Missionszielen</b> im "
 "<b>Hauptmenü</b> zu finden.)"
 
 #. [event]
@@ -1964,9 +1963,10 @@ msgid ""
 "deal 9 damage each for 4 attacks. Use me to dislodge hard-to-hit units."
 msgstr ""
 "Eine Stufe aufzusteigen, hat mich komplett geheilt!\n"
-"Ich habe immer eine 60% Wahrscheinlichkeit, mit meiner <i>Schießkunst</i>-"
-"Fertigkeit zu treffen, und verursache 9 Schadenspunkte mit jedem meiner 4 "
-"Angriffe. Verwendet mich, um schwer treffbare Einheiten zu vertreiben."
+"Mit meiner <i>Schießkunst</i>-Fertigkeit habe ich immer eine 60%ige "
+"Wahrscheinlichkeit, zu treffen, und verursache 9 Schadenspunkte mit jedem "
+"meiner 4 Angriffe. Verwendet mich, um schwer treffbare Einheiten zu "
+"vertreiben."
 
 #. [message]: speaker=unit
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1507
@@ -1976,9 +1976,10 @@ msgid ""
 "deal 9 damage each for 4 attacks. Use me to dislodge hard-to-hit units."
 msgstr ""
 "Eine Stufe aufzusteigen, hat mich komplett geheilt!\n"
-"Ich habe immer eine 60% Wahrscheinlichkeit, mit meiner <i>Schießkunst</i>-"
-"Fertigkeit zu treffen, und verursache 9 Schadenspunkte mit jedem meiner 4 "
-"Angriffe. Verwendet mich, um schwer treffbare Einheiten zu vertreiben."
+"Mit meiner <i>Schießkunst</i>-Fertigkeit habe ich immer eine 60%ige "
+"Wahrscheinlichkeit, zu treffen, und verursache 9 Schadenspunkte mit jedem "
+"meiner 4 Angriffe. Verwendet mich, um schwer treffbare Einheiten zu "
+"vertreiben."
 
 #. [message]: speaker=unit
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1523
@@ -2085,3 +2086,13 @@ msgstr ""
 #: data/campaigns/tutorial/units/Quintain.cfg:24
 msgid "flail"
 msgstr "Dreschflegel"
+
+# XXX - female shaman -- two strings needed
+#~ msgid ""
+#~ "female^No other units can reach that orc. I hope my $unit.language_name "
+#~ "survives its counter-attack! I’d better grab more villages and move "
+#~ "everyone closer for next turn."
+#~ msgstr ""
+#~ "Keine anderen Einheiten können den Ork erreichen. Ich hoffe, mein $unit."
+#~ "language_name überlebt den Gegenangriff! Ich nehme besser weitere Dörfer "
+#~ "ein und lasse meine übrigen Einheiten weiter auf den Gegner zumarschieren."
