--- a/po/wesnoth-manual/de.po
+++ b/po/wesnoth-manual/de.po
@@ -4,10 +4,10 @@
 #  Mark de Wever <koraq@xs4all.nl>, 2009 - 2010
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.8\n"
-"POT-Creation-Date: 2012-01-08 18:11+0100\n"
-"PO-Revision-Date: 2012-01-20 13:33+0100\n"
-"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
+"Project-Id-Version: Battle for Wesnoth 1.10\n"
+"POT-Creation-Date: 2012-01-22 14:59+0100\n"
+"PO-Revision-Date: 2012-04-04 20:15+0100\n"
+"Last-Translator: Christoph Berg <Christoph.Berg@kpm-sport.de>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -2159,6 +2159,15 @@ msgstr "Handlung in Warteschlange nach vorne verschieben"
 # type: Content of: <book><chapter><section><simpara>
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1307
+#, fuzzy
+#| msgid ""
+#| "Each side is given some amount of gold to begin with, and receives 2 gold "
+#| "pieces per turn, plus 2 more gold pieces for every village that side "
+#| "controls. In a campaign, starting gold is a minimum amount defined by the "
+#| "scenario, which is typically lower as the difficulty level increases. In "
+#| "addition you often get a percentage of gold to carry over from the last "
+#| "scenario played. The exact percentage depends on the scenario and is "
+#| "usually displayed as part of the scenario objectives."
 msgid ""
 "Each side is given some amount of gold to begin with, and receives 2 gold "
 "pieces per turn, plus 2 more gold pieces for every village that side "
@@ -2168,10 +2177,11 @@ msgid ""
 msgstr ""
 "Jede Seite beginnt mit etwas Gold und erhält 2 Goldstücke pro Zug sowie ein "
 "weiteres Goldstück pro Dorf, das von der Seite kontrolliert wird. In einer "
-"Kampagne ist das Startgold der größere Betrag von 80% des übrig gebliebenen "
-"Goldes des vorhergehenden Szenarios und einer minimalen Anzahl, die im "
-"Szenario selbst festgelegt ist, die üblicherweise geringer ausfällt, wenn "
-"der Schwierigkeitslevel höher ist."
+"Kampagne ist das Startgold pro Szenario festgelegt und wird üblicherweise "
+"mit steigendem Schwierigkeitsgrad geringer. Zusätzlich erhaltet ihr einen "
+"gewissen Anteil des übrig behaltenen Goldes aus dem letzten Szenario. Der "
+"exakte Prozentwert hängt vom Szenario ab und wird üblicherweise in den "
+"Missionszielen angezeigt."
 
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:1313
