updated French translation

--- a/po/wesnoth-manual/fr.po
+++ b/po/wesnoth-manual/fr.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.7+svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-02-18 14:42+0100\n"
-"PO-Revision-Date: 2012-02-20 11:59+0100\n"
-"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
+"PO-Revision-Date: 2012-04-04 15:42+0200\n"
+"Last-Translator: Guillaume Pascal <guillaume.pascal43@laposte.net>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -259,10 +259,9 @@ msgstr ""
 "superpose une colonne de boutons appelée « Menu principal ». Seule la souris "
 "permet de les utiliser. Nous recommandons aux impatients de cliquer sur le "
 "bouton « Langage » pour choisir la langue du jeu ; puis cliquez sur le "
-"bouton « Didacticiel » pour lancer la partie d'apprentissage ; celui-ci "
-"achevé, commencez par la campagne « L'Histoire des deux frères », en "
-"appuyant sur le bouton « Campagne » et en choisissant ce titre dans la liste "
-"qui s'affiche."
+"bouton « Tutoriel » pour lancer la partie d'apprentissage ; celui-ci achevé, "
+"commencez par la campagne « L'Histoire des deux frères », en appuyant sur le "
+"bouton « Campagne » et en choisissant ce titre dans la liste qui s'affiche."
 
 # type: Content of: <book><chapter><section><simpara><inlinemediaobject>
 #. type: Content of: <book><chapter><section><simpara><inlinemediaobject>
@@ -271,7 +270,7 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/main-menu-1.9.4.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/fr/main-menu-1.9.4.jpg\"/> </"
+"<imageobject> <imagedata fileref=\"images/fr/main-menu-1.10.1.jpg\"/> </"
 "imageobject>"
 
 #. type: Content of: <book><chapter><section><simpara><inlinemediaobject><textobject><phrase>
@@ -304,7 +303,7 @@ msgstr "<placeholder type=\"inlinemediaobject\" id=\"0\"/>"
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:98
 msgid "Tutorial"
-msgstr "Didacticiel"
+msgstr "Tutoriel"
 
 # type: Content of: <book><chapter><section><variablelist><varlistentry><listitem><simpara>
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><listitem><simpara>
@@ -317,9 +316,9 @@ msgid ""
 "sar, learning from the Elder Mage Delfador — pay attention or he might turn "
 "you into a newt."
 msgstr ""
-"Le didacticiel est un jeu simplifié mais en condition réelles, qui vous "
+"Le tutoriel est un jeu simplifié mais en condition réelles, qui vous "
 "enseigne les mécanismes de base. L'important n'est pas de gagner ou de "
-"perdre, mais d'apprendre. Cliquez sur le bouton « Didacticiel » pour "
+"perdre, mais d'apprendre. Cliquez sur le bouton « Tutoriel » pour "
 "commencer ; vous incarnerez le prince Konrad ou la princesse Li'sar, "
 "conseillés par le grand mage Delfador ; faites attention, ou il pourrait "
 "vous transformer en grenouille."
