--- a/po/wesnoth-tutorial/la.po
+++ b/po/wesnoth-tutorial/la.po
@@ -1563,9 +1563,15 @@ msgstr "Progredere actores alios viculos captum, tum <b>Fini Vicem</b>"
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1138
+#, fuzzy
+#| msgid ""
+#| "No other units can reach that orc. I hope my $unit.type survives its "
+#| "counter-attack! I’d better grab more villages and move everyone closer "
+#| "for next turn."
 msgid ""
-"No other units can reach that orc. I hope my $unit.type survives its counter-"
-"attack! I’d better grab more villages and move everyone closer for next turn."
+"No other units can reach that orc. I hope my $unit.language_name survives "
+"its counter-attack! I’d better grab more villages and move everyone closer "
+"for next turn."
 msgstr ""
 "Nulli actores orcem illum attingere possunt. Certamem eius $unit.type "
 "supersit! Debeo plures viculorum capere et omnes propius causa vicis "
