--- a/po/wesnoth-help/fi.po
+++ b/po/wesnoth-help/fi.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-24 18:11+0100\n"
-"PO-Revision-Date: 2012-02-21 04:17+0200\n"
+"PO-Revision-Date: 2012-04-04 14:11+0300\n"
 "Last-Translator: Jarkko Patteri <jarkkopatteri@gmail.com>\n"
 "Language-Team: Finnish <http://wiki.wesnoth.org/FinnishTranslation>\n"
 "Language: fi\n"
@@ -167,7 +167,7 @@ msgid ""
 "Clasher' text='Clasher'</ref> or a <ref>dst='unit_Drake Fighter' text='Drake "
 "Fighter'</ref>."
 msgstr ""
-"Draakin eriävä ulkomuoto: joko <ref>dst='unit_Drake Clashed' text='draakkien "
+"Draakin eriävä ulkomuoto: joko <ref>dst='unit_Drake Clasher' text='draakkien "
 "iskusoturi'</ref> tai <ref>dst='unit_Drake Fighter' "
 "text='Draakkitaistelija'</ref>."
 
@@ -870,7 +870,7 @@ msgstr ""
 "Elensefar on aina välillä <ref>dst='kingdom_wesnoth' text='Wesnothin'</ref> "
 "provinssi, välillä itsenäinen ja välillä liitossa Wesnothin kanssa. "
 "Rajavyöhykket määrittää Suurijoki pohjoisessa, idässä karkeasti määritelty "
-"rajalinja Wesnothin kanssa, Helmilahti etelässä ja ja <ref> dst='great_ocean "
+"rajalinja Wesnothin kanssa, Helmilahti etelässä ja ja <ref>dst='great_ocean' "
 "text='valtameri'</ref> lännessä. Lisätietoa löytyy Wesnothin historiikista.\n"
 "\n"
 "    • Huomattavia kaupunkeja:\n"
@@ -1339,11 +1339,11 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"Kun voitat tehtävän, kartta harmaantuu ja <bold>Lopeta vuoro</bold> -nappi "
-"muuttuu <bold>Päätä tehtävä</bold >-napiksi. Voit vielä tehdä asioita, kuten "
-"muuttaa tallennusasetuksia tai (moninpelissä) keskustella muiden pelaajien "
-"kanssa, ennen kuin painat lopetusnappia päästääksesi takaisin palvelimen "
-"aulaan/valikkoon."
+"Kun voitat tehtävän, kartta harmaantuu ja <bold>text='Lopeta vuoro'</bold> -"
+"nappi muuttuu <bold>text='Päätä tehtävä'</bold>-napiksi. Voit vielä tehdä "
+"asioita, kuten muuttaa tallennusasetuksia tai (moninpelissä) keskustella "
+"muiden pelaajien kanssa, ennen kuin painat lopetusnappia päästääksesi "
+"takaisin palvelimen aulaan/valikkoon."
 
 #. [topic]: id=recruit_and_recall
 #: data/core/help.cfg:162
@@ -3515,6 +3515,10 @@ msgid ""
 "'m' first to open the chat line).\n"
 "\n"
 msgstr ""
+"Komentoja voi antaa joko komentolinjan tai keskustelulinjan kautta. "
+"Komentolinjalla komennon eteen tulee ':' (kuten esimerkissä). "
+"Keskustelulinjalla komennon eteen tulee '/'. Muista avata keskustelulinja "
+"ensin painamalla 'm'-näppäintä.\n"
 
 #. [topic]: id=mp_commands
 #: data/core/help.cfg:835
