Updated the Spanish translation.

--- a/po/wesnoth-help/es.po
+++ b/po/wesnoth-help/es.po
@@ -23,7 +23,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-02-19 20:11-0500\n"
+"PO-Revision-Date: 2012-03-03 00:02+0100\n"
 "Last-Translator: Aelonin <quianaaelonin@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
@@ -1626,8 +1626,7 @@ msgstr " rojo si no puede moverse ni atacar, o el usuario finalizó si turno."
 #. [topic]: id=orbs
 #: data/core/help.cfg:183
 msgid " blue if the unit is an ally you do not control."
-msgstr ""
-" azul si la unidad es aliada y el jugador no se tiene control sobre ella."
+msgstr " azul si la unidad es aliada y el jugador no tiene control sobre ella."
 
 #. [topic]: id=orbs
 #: data/core/help.cfg:184
