--- a/po/wesnoth/es.po
+++ b/po/wesnoth/es.po
@@ -18,13 +18,14 @@
 # Alvin Eloy Luna Castro <alvineloy@gmail.com>, 2011.
 # Ignacio Riquelme Morelle <shadowm2006@gmail.com>, 2011, 2012.
 # Aelonin <quianaaelonin@gmail.com>, 2011, 2012.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-02-24 01:49-0500\n"
-"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
+"PO-Revision-Date: 2012-03-08 00:04+0100\n"
+"Last-Translator: Aelonin <quianaaelonin@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -3075,10 +3076,10 @@ msgid ""
 "little experience it has. Sometimes it’s worth paying a premium to know "
 "exactly what traits a new arrival will have."
 msgstr ""
-"Piense dos veces antes de licenciar a una unidad de la lista de "
-"reincorporar, no importa cuanta experiencia posea. Es conveniente, algunas "
-"veces, esperar a ver exactamente el tipo de alineamiento que el enemigo "
-"pueda tener antes de tomar esta decisión. "
+"Piense dos veces antes de expulsar a una unidad de la lista de reincorporar, "
+"no importa cuanta experiencia posea. Es conveniente, algunas veces, esperar "
+"a ver exactamente el tipo de alineamiento que el enemigo pueda tener antes "
+"de tomar esta decisión. "
 
 #. [tip]
 #: data/hardwired/tips.cfg:220
@@ -4348,7 +4349,7 @@ msgstr ""
 
 #: src/menu_events.cpp:100 src/menu_events.cpp:103 src/menu_events.cpp:107
 msgid "Do you really want to dismiss him?"
-msgstr "¿Está seguro de que quiere licenciarlo?"
+msgstr "¿Está seguro de que quiere expulsarlo?"
 
 #: src/menu_events.cpp:100
 msgid "My lord, this unit is loyal and requires no upkeep! "
@@ -4356,7 +4357,7 @@ msgstr "¡Mi señor, está unidad es leal y no cobra ingresos! "
 
 #: src/menu_events.cpp:101 src/menu_events.cpp:104 src/menu_events.cpp:108
 msgid "Do you really want to dismiss her?"
-msgstr "¿Está seguro de que realmente quiere licenciarla?"
+msgstr "¿Está seguro de que realmente quiere expulsarla?"
 
 #: src/menu_events.cpp:103
 msgid "My lord, this unit is an experienced one, having advanced levels! "
@@ -4565,7 +4566,7 @@ msgstr "Reincorporar"
 
 #: src/menu_events.cpp:958
 msgid "Dismiss Unit"
-msgstr "Licenciar unidad"
+msgstr "Expulsar unidad"
 
 #: src/menu_events.cpp:994
 msgid "You must have at least 1 gold piece to recall a unit"
