--- a/po/wesnoth-manpages/ang.po
+++ b/po/wesnoth-manpages/ang.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: ang\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 12:00+0100\n"
-"PO-Revision-Date: 2012-01-20 20:14-0500\n"
+"PO-Revision-Date: 2012-04-05 22:14-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n==2 ? 1 : 2\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #. type: TH
 #: ../../doc/man/wesnoth.6:16
@@ -39,7 +39,7 @@ msgstr "wesnoth"
 #: ../../doc/man/wesnoth.6:16
 #, no-wrap
 msgid "Battle for Wesnoth"
-msgstr "ᚹᛁᚷ ᚠᚩᚱ ᚹᛖᛋᚾᚩᚦ"
+msgstr "ᚹᛁᚷ ᚣᛗᛒᛖ ᚹᛖᛋᚾᚩᚦ"
 
 #. type: SH
 #: ../../doc/man/wesnoth.6:18 ../../doc/man/wesnothd.6:18
@@ -124,7 +124,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:54
 #, no-wrap
 msgid "B<--campaign-difficulty E<lt>difficultyE<gt>>"
-msgstr ""
+msgstr "B<--campaign-difficulty E<lt>ᛠᚱᚠᚩᚦᚾᛖᛋE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:57
@@ -554,7 +554,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:219
 #, no-wrap
 msgid "B<--ai_config>I<number>B<=>I<value>"
-msgstr ""
+msgstr "B<--ai_config>I<ᚱᛁᛗ>B<=>I<ᚹᛇᚱᚦ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:222
@@ -566,7 +566,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:222
 #, no-wrap
 msgid "B<--algorithm>I<number>B<=>I<value>"
-msgstr ""
+msgstr "B<--algorithm>I<ᚱᛁᛗ>B<=>I<ᚹᛇᚱᚦ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:229
@@ -579,7 +579,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:229
 #, no-wrap
 msgid "B<--controller>I<number>B<=>I<value>"
-msgstr ""
+msgstr "B<--controller>I<ᚱᛁᛗ>B<=>I<ᚹᛇᚱᚦ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:235
@@ -591,7 +591,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:235
 #, no-wrap
 msgid "B<--era=>I<value>"
-msgstr ""
+msgstr "B<--era=>I<ᚹᛇᚱᚦ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:242
@@ -632,7 +632,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:251
 #, no-wrap
 msgid "B<--parm>I<number>B<=>I<name>B<:>I<value>"
-msgstr ""
+msgstr "B<--parm>I<ᚱᛁᛗ>B<=>I<ᚾᚪᛗᚪ>B<:>I<ᚹᛇᚱᚦ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:260
@@ -646,7 +646,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:260
 #, no-wrap
 msgid "B<--scenario=>I<value>"
-msgstr ""
+msgstr "B<--scenario=>I<ᚹᛇᚱᚦ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:264
@@ -659,7 +659,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:264
 #, no-wrap
 msgid "B<--side>I<number>B<=>I<value>"
-msgstr ""
+msgstr "B<--side>I<ᚱᛁᛗ>B<=>I<ᚹᛇᚱᚦ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:269
@@ -672,7 +672,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:269
 #, no-wrap
 msgid "B<--turns=>I<value>"
-msgstr ""
+msgstr "B<--turns=>I<ᚹᛇᚱᚦ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:273
@@ -783,8 +783,8 @@ msgid ""
 "B<wesnothd> [\\|B<-dv>\\|] [\\|B<-c> I<path>\\|] [\\|B<-p> I<port>\\|] [\\|"
 "B<-t> I<number>\\|] [\\|B<-T> I<number>\\|]"
 msgstr ""
-"B<wesnothd> [\\|B<-dv>\\|] [\\|B<-c> ᛁ<pæþ>\\|] [\\|B<-p> ᛁ<port>\\|] [\\|B<-"
-"t> ᛁ<rim>\\|] [\\|B<-T> ᛁ<rim>\\|]"
+"B<wesnothd> [\\|B<-dv>\\|] [\\|B<-c> I<ᛈᚫᚦ>\\|] [\\|B<-p> I<port>\\|] [\\|B<-"
+"t> I<ᚱIᛗ>\\|] [\\|B<-T> I<ᚱᛁᛗ>\\|]"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:39
@@ -803,7 +803,7 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:47
 #, no-wrap
 msgid "B<-c\\ >I<path>B<,\\ --config>I<\\ path>"
-msgstr ""
+msgstr "B<-c\\ >I<ᛈᚫᚦ>B<,\\ --config>I<\\ ᛈᚫᚦ>"
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:52
@@ -918,13 +918,15 @@ msgstr ""
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:103
+#, fuzzy
 msgid "I<key>=\"I<value>\""
-msgstr ""
+msgstr "I<cæg>=\"I<ᚹᛇᚱᚦ>\""
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:105
+#, fuzzy
 msgid "I<key>=\"I<value>,I<value>,...\""
-msgstr ""
+msgstr "I<cæg>=\"I<ᚹᛇᚱᚦ>,I<ᚹᛇᚱᚦ>,...\""
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:107
