--- a/po/wesnoth/ang.po
+++ b/po/wesnoth/ang.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: ang\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-01-21 16:22-0500\n"
+"PO-Revision-Date: 2012-04-06 00:07-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n==2 ? 1 : 2\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:4
@@ -312,7 +312,7 @@ msgstr ""
 #: data/core/about.cfg:1227
 #, fuzzy
 msgid "English strings edition"
-msgstr "ᚾᛁᚹᛖ ᛖᛝᛚᛁᛋᚳ"
+msgstr "ᚾᛁᚹᛖ ᛖᛝᛚᛁᛋᚳ ᛋᛏᚱᛖᛝᚪ ᚠᚪᛞᚢᛝ"
 
 #. [about]
 #: data/core/about.cfg:1234
@@ -342,12 +342,12 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:1334
 msgid "Chinese Translation"
-msgstr ""
+msgstr "ᚳᛁᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1402
 msgid "Chinese (Taiwan) Translation"
-msgstr ""
+msgstr "ᚳᛁᚾᛁᛋᚳ (ᛏᚪᛁᚹᚪᚾ) ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1412
@@ -379,7 +379,7 @@ msgstr "ᚾᛁᚹᛖ ᛖᛝᛚᛁᛋᚳ (ᚷᛒ) ᚷᛖᚦᛇᛞᚾᛖᛋ"
 #: data/core/about.cfg:1596
 #, fuzzy
 msgid "English (Shaw) Translation"
-msgstr "ᚾᛁᚹᛖ ᛖᛝᛚᛁᛋᚳ (ᛋᚻᚪᚹ) ᚷᛖᚦᛇᛞᚾᛖᛋ"
+msgstr "ᚾᛁᚹᛖ ᛖᛝᛚᛁᛋᚳ (ᚩᚾ ᛋᚳᚪᚹᛖᛋ ᛋᛏᚫᚠᚱᚩᚠᛖ) ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:1620
@@ -498,7 +498,6 @@ msgstr "ᚾᚩᚱᚦᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2346
-#, fuzzy
 msgid "Old English Translation"
 msgstr "ᛖᛝᛚᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
@@ -552,11 +551,11 @@ msgstr "ᛋᛈᛇᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 msgid "Swedish Translation"
 msgstr "ᛋᚹᛇᚾᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
+# Espreon sayeth: I dunno, I felt like using cealc...
 #. [about]
 #: data/core/about.cfg:2717
-#, fuzzy
 msgid "Turkish Translation"
-msgstr "ᛏᚢᚱᚳᛁᛋᚳᚢ ᚷᛖᚦᛇᛞᚾᛖᛋ"
+msgstr "ᛏᚢᚱᛣᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2739
@@ -566,7 +565,7 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:2752
 msgid "Vietnamese Translation"
-msgstr ""
+msgstr "ᚠᛁᛖᛏᚾᚪᛗᛁᛋᚳ ᚷᛖᚦᛇᛞᚾᛖᛋ"
 
 #. [about]
 #: data/core/about.cfg:2771
@@ -670,9 +669,8 @@ msgstr ""
 #: data/core/macros/ai_controller.cfg:320
 #: data/core/macros/ai_controller.cfg:709
 #: data/core/macros/ai_controller.cfg:800
-#, fuzzy
 msgid "Back"
-msgstr "ᛒᚫᚳ"
+msgstr ""
 
 #. [protect]
 #: data/core/macros/ai_controller.cfg:201
@@ -916,7 +914,7 @@ msgstr ""
 #. [object]: id={ID}
 #: data/core/macros/items.cfg:423
 msgid "Ring of Slowness"
-msgstr ""
+msgstr "ᛚᚫᛏᚾᛖᛋᛋᛖ ᚻᚱᛁᛝ"
 
 #. [object]: id={ID}
 #: data/core/macros/items.cfg:426
@@ -944,20 +942,20 @@ msgstr ""
 
 #: data/core/macros/items.cfg:514
 msgid "Should $unit.name pick up the trident?"
-msgstr ""
+msgstr "ᛋᚳᛠᛚ $unit.name ᚦᚩᚾᛖ ᚦᚱᛇᛏᛁᚾᛞ ᚾᛁᛗᚪᚾ?"
 
 #: data/core/macros/items.cfg:514
 msgid "storm trident^Leave it"
-msgstr ""
+msgstr "ᚻᛁᚾᛖ ᛚᚫᚠᚪᚾ"
 
 #: data/core/macros/items.cfg:514
 msgid "storm trident^Take it"
-msgstr ""
+msgstr "ᚻᛁᚾᛖ ᚾᛁᛗᚪᚾ"
 
 #. [object]
 #: data/core/macros/items.cfg:516
 msgid "Storm Trident"
-msgstr ""
+msgstr "ᛋᛏᚩᚱᛗᛖᛋ ᚦᚱᛇᛏᛁᚾᛞ"
 
 #. [object]
 #: data/core/macros/items.cfg:519
@@ -1570,7 +1568,7 @@ msgstr ""
 #. [color_range]: id=2
 #: data/core/team-colors.cfg:32 data/core/team-colors.cfg:89
 msgid "Blue"
-msgstr "ᛒᛚᚪᚹ"
+msgstr "ᚻᚫᚹᛖᚾ"
 
 #. [color_range]: id=green
 #. [color_range]: id=3
@@ -1578,12 +1576,11 @@ msgstr "ᛒᛚᚪᚹ"
 msgid "Green"
 msgstr "ᚷᚱᛖᚾᛖ"
 
-# TODO: try to find an English word for this...
 #. [color_range]: id=purple
 #. [color_range]: id=4
 #: data/core/team-colors.cfg:44 data/core/team-colors.cfg:101
 msgid "Purple"
-msgstr "ᛈᚢᚱᛈᚢᛚ"
+msgstr "ᛒᚪᛋᚢ"
 
 #. [color_range]: id=black
 #. [color_range]: id=5
@@ -1601,7 +1598,7 @@ msgstr "ᛒᚱᚢᚾ"
 #. [color_range]: id=7
 #: data/core/team-colors.cfg:62 data/core/team-colors.cfg:107
 msgid "Orange"
-msgstr "ᚷᛇᛚᚢᚻᚱᛠᛞ"
+msgstr "ᚷᛇᛚᚢᚱᛠᛞ"
 
 #. [color_range]: id=white
 #. [color_range]: id=8
@@ -1609,12 +1606,11 @@ msgstr "ᚷᛇᛚᚢᚻᚱᛠᛞ"
 msgid "White"
 msgstr "ᚻᚹᛁᛏ"
 
-# I guess we can call it 'blue-green'...
 #. [color_range]: id=teal
 #. [color_range]: id=9
 #: data/core/team-colors.cfg:74 data/core/team-colors.cfg:131
 msgid "Teal"
-msgstr "ᛒᛚᚪᚹᚷᚱᛖᚾᛖ"
+msgstr "ᚷᚱᛖᚾᛖᚻᚫᚹᛖᚾ"
 
 #. [language]
 #: data/english.cfg:3
@@ -1628,15 +1624,14 @@ msgstr ""
 
 #. [language]
 #: data/english.cfg:5
-#, fuzzy
 msgid "Hard"
-msgstr "ᚻᛠᚱᛞ"
+msgstr "ᛠᚱᚠᚩᚦᛚᛁᚳ"
 
 #. [language]
 #: data/english.cfg:6
 #, fuzzy
 msgid "Nightmare"
-msgstr "ᚫᛚᚠᚪᛞᛚ"
+msgstr "ᛋᚹᛁᚦᛖ ᛠᚱᚠᚩᚦ"
 
 #. [language]
 #: data/english.cfg:11
@@ -1696,7 +1691,7 @@ msgstr ""
 #: data/english.cfg:27
 #, fuzzy
 msgid "$name Lake"
-msgstr "$name|ᛖᛋ ᛚᚪᚷᚢ"
+msgstr "$name ᛚᚪᚷᚢ"
 
 #. [language]
 #: data/english.cfg:28
@@ -1786,12 +1781,12 @@ msgstr "$name|ᛒᚢᚱᚻ,$name|ᚻᚪᛗ,$name|ᛏᚢᚾ,$swamp|ᛒᚢᚱᚻ,$
 #. [language]
 #: data/english.cfg:43
 msgid "melee"
-msgstr ""
+msgstr "ᚾᛠᚻᚠᛇᚻᛏ"
 
 #. [language]
 #: data/english.cfg:44
 msgid "ranged"
-msgstr ""
+msgstr "ᚠᛇᚱᚠᛇᚻᛏ"
 
 #. [language]
 #: data/english.cfg:47
@@ -1806,7 +1801,7 @@ msgstr "ᛋᛏᛁᚳᛖ"
 #. [language]
 #: data/english.cfg:49
 msgid "impact"
-msgstr "ᚷᛖᚷᚱᛁᚾᛞ"
+msgstr "ᛞᚣᚾᛏ"
 
 #. [language]
 #: data/english.cfg:50
@@ -1835,19 +1830,17 @@ msgstr ""
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:7
-#, fuzzy
-#| msgid "DejaVuSans.ttf,Andagii.ttf,wqy-zenhei.ttc,Junicode-Regular.ttf"
 msgid ""
 "DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,"
 "Junicode-Regular.ttf"
-msgstr "DejaVuSans.ttf,Andagii.ttf,wqy-zenhei.ttc,Junicode-Regular.ttf"
+msgstr ""
+"DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,"
+"Junicode-Regular.ttf"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:8
-#, fuzzy
-#| msgid "DejaVu Sans,Andagii,WenQuanYi Zen Hei,Junicode"
 msgid "DejaVu Sans,Andagii,Droid Sans Japanese,Droid Sans Fallback,Junicode"
-msgstr "DejaVu Sans,Andagii,WenQuanYi Zen Hei,Junicode"
+msgstr "DejaVu Sans,Andagii,Droid Sans Japanese,Droid Sans Fallback,Junicode"
 
 #. [tip]
 #: data/hardwired/tips.cfg:4
@@ -1902,7 +1895,7 @@ msgstr ""
 #: data/hardwired/tips.cfg:13
 #, fuzzy
 msgid "<i>― King Konrad, 536YW</i>"
-msgstr "<i>― ᚳᚣᚾᛁᛝ ᚳᚩᚾᚱᚪᛞ, 536ᚣᚹ</i>"
+msgstr "<i>― ᚳᚩᚾᚱᚪᛞ ᚳᚣᚾᛁᛝ, 536ᚹᚷ</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:16
@@ -1946,8 +1939,9 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:29 data/hardwired/tips.cfg:105
 #: data/hardwired/tips.cfg:213 data/hardwired/tips.cfg:225
+#, fuzzy
 msgid "<i>― High Lord Kalenz, 470YW</i>"
-msgstr ""
+msgstr "<i>― ᚳᚪᛚᛖᚾz ᚻᛠᚻ ᚻᛚᚪᚠᚩᚱᛞ, 470ᚹᚷ</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:32
@@ -2165,7 +2159,7 @@ msgstr ""
 #: data/hardwired/tips.cfg:117
 #, fuzzy
 msgid "<i>― Meneldur, 123YW</i>"
-msgstr "<i>― ᛗᛖᚾᛖᛚᛞᚢᚱ, 123ᚣᚹ</i>"
+msgstr "<i>― ᛗᛖᚾᛖᛚᛞᚢᚱ, 123ᚹᚷ</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:120
@@ -2310,7 +2304,7 @@ msgstr ""
 #: data/hardwired/tips.cfg:185
 #, fuzzy
 msgid "<i>― Queen Li’sar, 528YW</i>"
-msgstr "<i>― ᚳᚣᚾᛁᛝᛖ ᛚᛁ’ᛋᚪᚱ, 528ᚣᚹ</i>"
+msgstr "<i>― ᛚᛁ’ᛋᚪᚱ ᚳᚣᚾᛁᛝᛖ, 528ᚹᚷ</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:188
@@ -2389,8 +2383,9 @@ msgstr ""
 
 #. [tip]
 #: data/hardwired/tips.cfg:221 data/hardwired/tips.cfg:233
+#, fuzzy
 msgid "<i>― Lord Hamel of Knalga</i>"
-msgstr ""
+msgstr "<i>― ᚳᚾᚪᛚᚷᚪᚾ ᚻᚪᛗᛖᛚ ᚻᛚᚪᚠᚩᚱᛞ</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:224
@@ -2469,7 +2464,7 @@ msgstr ""
 
 #: data/lua/wml/objectives.lua:53
 msgid "Notes:"
-msgstr "ᚾᚩᛏᚪᛋ:"
+msgstr "ᚷᛖᚹᚱᛁᛏᚢ:"
 
 #: data/lua/wml/objectives.lua:71
 msgid "(%d turns left)"
@@ -2498,11 +2493,14 @@ msgstr "ᚷᛠᛏᚪᚾ"
 msgid "Cancel"
 msgstr ""
 
+# If we decide this is too long, we could either go with "oferfeor" or
+# "oferlang", but consistency is golden, so blargh.
 #. [language]
 #: data/scenario-test.cfg:3157
 msgid "very long"
-msgstr ""
+msgstr "ᚩᚠᛖᚱᚠᛇᚱᚠᛇᚻᛏ"
 
+# TODO: perhaps reconsider this translation
 #. [language]
 #: data/scenario-test.cfg:3158
 msgid "electrical"
@@ -2718,7 +2716,7 @@ msgstr ""
 
 #: src/actions.cpp:2715
 msgid "Ambushed!"
-msgstr "ᚷᛖᛋᚫᛏᛖᛞ!"
+msgstr "ᛒᛖᛋᚫᛏᚩᛞ!"
 
 #: src/actions.cpp:2722
 msgid "Failed teleport! Exit not empty"
@@ -2747,7 +2745,6 @@ msgid "Part of 'Units sighted! (...)' sentence^1 enemy"
 msgid_plural "$enemies enemy"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: src/actions.cpp:2777
 msgid "Units sighted! ($friendphrase, $enemyphrase)"
@@ -3066,7 +3063,6 @@ msgid "Are you sure you want to remove the following installed add-on?"
 msgid_plural "Are you sure you want to remove the following installed add-ons?"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: src/addon/manager.cpp:1442
 msgid ""
@@ -3077,28 +3073,24 @@ msgid_plural ""
 "information stored locally, and will not be removed:"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: src/addon/manager.cpp:1452
 msgid "The following add-on could not be deleted properly:"
 msgid_plural "The following add-ons could not be deleted properly:"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: src/addon/manager.cpp:1459
 msgid "Add-on Deleted"
 msgid_plural "Add-ons Deleted"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: src/addon/manager.cpp:1461
 msgid "The following add-on was successfully deleted:"
 msgid_plural "The following add-ons were successfully deleted:"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: src/attack_prediction_display.cpp:105 src/attack_prediction_display.cpp:237
 msgid "Attacker"
@@ -3198,7 +3190,7 @@ msgstr ""
 
 #: src/dialogs.cpp:514
 msgid "Difficulty: "
-msgstr ""
+msgstr "ᛠᚱᚠᚩᚦᚾᛖᛋ: "
 
 #: src/dialogs.cpp:516
 msgid "Version: "
@@ -3242,7 +3234,7 @@ msgstr ""
 
 #: src/dialogs.cpp:609
 msgid "Date"
-msgstr ""
+msgstr "ᛏᚫᛚᛗᛠᚱᚳ"
 
 #: src/dialogs.cpp:626 src/multiplayer_create.cpp:115
 msgid "Load Game"
@@ -3348,7 +3340,7 @@ msgstr ""
 
 #: src/game_controller.cpp:1077 src/game_controller_abstract.cpp:99
 msgid "The Battle for Wesnoth"
-msgstr "ᚦᚫᛏ ᚹᛁᚷ ᚠᚩᚱ ᚹᛖᛋᚾᚩᚦ"
+msgstr "ᚦᚫᛏ ᚹᛁᚷ ᚣᛗᛒᛖ ᚹᛖᛋᚾᚩᚦ"
 
 #: src/game_controller.cpp:1196
 msgid "The following add-on had errors and could not be loaded:"
@@ -3390,11 +3382,11 @@ msgstr ""
 
 #: src/gui/dialogs/lobby/lobby_data.cpp:205 src/multiplayer_lobby.cpp:447
 msgid "Unknown era: $era_id"
-msgstr ""
+msgstr "ᚢᚾᚳᚢᚦ ᛁᛖᛚᛞᚢ: $era_id"
 
 #: src/gui/dialogs/lobby/lobby_data.cpp:210 src/multiplayer_lobby.cpp:451
 msgid "Unknown era"
-msgstr ""
+msgstr "ᚢᚾᚳᚢᚦ ᛁᛖᛚᛞᚢ"
 
 #: src/gui/dialogs/lobby/lobby_data.cpp:266 src/multiplayer_lobby.cpp:513
 msgid "Remote scenario"
@@ -3438,7 +3430,6 @@ msgid "none"
 msgstr "ᚾᚪᚾ"
 
 #: src/gui/dialogs/lobby_player_info.cpp:98
-#, fuzzy
 msgid "In game:"
 msgstr "ᚩᚾ ᚷᚪᛗᛖᚾᛖ:"
 
@@ -3662,7 +3653,7 @@ msgstr ""
 
 #: src/menu_events.cpp:489
 msgid "More >"
-msgstr "ᛗᚪᚱᚪ >"
+msgstr "ᛗᚪ >"
 
 #: src/menu_events.cpp:507
 msgid "scenario settings^Leader"
@@ -3747,7 +3738,6 @@ msgid "unit^Gold"
 msgid_plural "Gold"
 msgstr[0] "ᚷᚩᛚᛞ"
 msgstr[1] "ᚷᚩᛚᛞ"
-msgstr[2] "ᚷᚩᛚᛞ"
 
 #: src/menu_events.cpp:728
 msgid "You have no units available to recruit."
@@ -3816,7 +3806,7 @@ msgstr ""
 
 #: src/menu_events.cpp:1538
 msgid "Race"
-msgstr ""
+msgstr "ᚳᚣᚾᚾ"
 
 #: src/menu_events.cpp:1562
 msgid "Create Unit (Debug!)"
@@ -3824,7 +3814,7 @@ msgstr ""
 
 #: src/menu_events.cpp:1565 src/multiplayer_wait.cpp:131
 msgid "Gender: "
-msgstr ""
+msgstr "ᚷᛖᚳᚣᚾᛞ: "
 
 #: src/menu_events.cpp:1858
 msgid "Search"
@@ -3848,7 +3838,7 @@ msgstr ""
 
 #: src/menu_events.cpp:2061
 msgid "do not translate the 'all'^[all|<command>]"
-msgstr "[all|<ᚷᛖᛒᚩᛞᚢ>]"
+msgstr "[all|<ᚷᛖᛒᚩᛞ>]"
 
 #: src/menu_events.cpp:2105
 msgid "Error:"
@@ -3908,7 +3898,7 @@ msgstr ""
 #: src/menu_events.cpp:2341 src/menu_events.cpp:2343 src/menu_events.cpp:2370
 #: src/menu_events.cpp:2372 src/menu_events.cpp:2374 src/menu_events.cpp:2388
 msgid "<nickname>"
-msgstr "<ᛠᚳᚪᚾᚪᛗᚪ>"
+msgstr "<ᛒᚱᚢᚳᛖᚾᛞᚾᚪᛗᚪ>"
 
 #: src/menu_events.cpp:2336
 msgid "Unban a user. He does not have to be in the game but on the server."
@@ -4274,9 +4264,7 @@ msgstr ""
 msgid "Switched domain: '$domain' to level: '$level'."
 msgstr ""
 
-# Should we append a dative -e to what's inside of $receiver?
 #: src/menu_events.cpp:2767
-#, fuzzy
 msgid "whisper to $receiver"
 msgstr "ᚻᚹᛁᛋᛈᚱᛁᚪᚾ ᛏᚩ $receiver"
 
@@ -4344,7 +4332,7 @@ msgstr ""
 
 #: src/menu_events.cpp:2987
 msgid "setting $var to $value"
-msgstr "ᛋᛖᛏᛖᚾᛞᛖ $var ᛏᚩ $value"
+msgstr "ᛋᛖᛏᛏᛖᚾᛞᛖ $var ᛏᚩ $value"
 
 #: src/menu_events.cpp:3001
 msgid "requesting information for user $nick"
@@ -4600,7 +4588,6 @@ msgid "Reserved"
 msgstr ""
 
 #: src/multiplayer_connect.cpp:762
-#, fuzzy
 msgid "--give--"
 msgstr "--ᚷᛁᛖᚠᚪᚾ--"
 
@@ -4666,7 +4653,7 @@ msgstr ""
 
 #: src/multiplayer_connect.cpp:1525
 msgid "Empty"
-msgstr "ᚫᛗᛏᛏᛁᚷ"
+msgstr "ᚫᛗᛖᛏᛏᛁᚷ"
 
 #: src/multiplayer_connect.cpp:1678
 msgid "Cannot find era $era"
@@ -4810,11 +4797,11 @@ msgstr ""
 
 #: src/multiplayer_create.cpp:224
 msgid "No eras found."
-msgstr ""
+msgstr "ᚾᚪᚾᚪ ᛁᛖᛚᛞᚪ ᚷᛖᚠᚢᚾᛞᛖᚾ."
 
 #: src/multiplayer_create.cpp:225
 msgid "No eras found"
-msgstr ""
+msgstr "ᚾᚪᚾᚪ ᛁᛖᛚᛞᚪ ᚷᛖᚠᚢᚾᛞᛖᚾ"
 
 #: src/multiplayer_create.cpp:238
 msgid "$login|’s game"
@@ -4857,10 +4844,8 @@ msgid "Action bonus: "
 msgstr ""
 
 #: src/multiplayer_create.cpp:423
-#, fuzzy
-#| msgid "Village"
 msgid "Village gold: "
-msgstr "ᚦᚩᚱᛈ"
+msgstr "ᚦᚩᚱᛈᛖᛋ ᚷᚩᛚᛞ:"
 
 #: src/multiplayer_create.cpp:429
 msgid "Experience modifier: "
@@ -4880,7 +4865,7 @@ msgstr ""
 
 #: src/multiplayer_lobby.cpp:159
 msgid " (Unknown Era)"
-msgstr ""
+msgstr " (ᚢᚾᚳᚢᚦ ᛁᛖᛚᛞᚢ)"
 
 #: src/multiplayer_lobby.cpp:552 src/multiplayer_lobby.cpp:891
 msgid "Password Required"
@@ -4924,7 +4909,7 @@ msgstr ""
 
 #: src/multiplayer_lobby.cpp:749
 msgid "Friends in game"
-msgstr ""
+msgstr "ᚠᚱᛁᛖᚾᛞ ᚩᚾ ᚷᚪᛗᛖᚾᛖ"
 
 #: src/multiplayer_lobby.cpp:750
 msgid "Search:"
@@ -5012,7 +4997,6 @@ msgid "multiplayer_starting_gold^Gold"
 msgid_plural "multiplayer_starting_gold^Gold"
 msgstr[0] "ᚷᚩᛚᛞ"
 msgstr[1] "ᚷᚩᛚᛞ"
-msgstr[2] "ᚷᚩᛚᛞ"
 
 #: src/network.cpp:109
 msgid "invalid network handle"
@@ -5247,7 +5231,7 @@ msgstr ""
 
 #: src/reports.cpp:195
 msgid "Race: "
-msgstr ""
+msgstr "ᚳᚣᚾᚾ: "
 
 #: src/reports.cpp:237
 msgid "Level: "
@@ -5544,7 +5528,6 @@ msgid "$error, value '$value', previous '$previous_value' at $pos"
 msgstr ""
 
 #: src/serialization/parser.cpp:366
-#, fuzzy
 msgid "$error, value '$value' at $pos"
 msgstr "$error, ᚹᛇᚱᚦ '$value' ᚫᛏ $pos"
 
@@ -5800,3 +5783,21 @@ msgstr ""
 
 #~ msgid "Lord"
 #~ msgstr "ᚻᛚᚪᚠᚩᚱᛞ"
+
+#~ msgid "(Hard)"
+#~ msgstr "(ᚻᛠᚱᛞ)"
+
+#~ msgid "High Lord"
+#~ msgstr "ᚻᛠᚻ ᚻᛚᚪᚠᚩᚱᛞ"
+
+#~ msgid "Enemies"
+#~ msgstr "ᚷᛖᚹᛁᚾᚾᚪᚾ"
+
+#~ msgid "B"
+#~ msgstr "ᛒ"
+
+#~ msgid "MB"
+#~ msgstr "ᛗᛒ"
+
+#~ msgid "GB"
+#~ msgstr "ᚷᛒ"
