--- a/po/wesnoth/ang@latin.po
+++ b/po/wesnoth/ang@latin.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-22 15:00+0100\n"
-"PO-Revision-Date: 2012-02-24 02:58-0500\n"
+"PO-Revision-Date: 2012-03-12 01:27-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n==2 ? 1 : 2\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #. [advanced_preference]: type=boolean
 #: data/advanced_preferences.cfg:4
@@ -312,7 +312,7 @@ msgstr ""
 #: data/core/about.cfg:1227
 #, fuzzy
 msgid "English strings edition"
-msgstr "Niƿe Englisc"
+msgstr "Niƿe Englisc strenga fadung"
 
 #. [about]
 #: data/core/about.cfg:1234
@@ -342,12 +342,12 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:1334
 msgid "Chinese Translation"
-msgstr ""
+msgstr "Cinisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1402
 msgid "Chinese (Taiwan) Translation"
-msgstr ""
+msgstr "Cinisc (Taiƿan) Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1412
@@ -379,7 +379,7 @@ msgstr "Niƿe Englisc (GB) Geþeodnes"
 #: data/core/about.cfg:1596
 #, fuzzy
 msgid "English (Shaw) Translation"
-msgstr "Niƿe Englisc (Shaw) Geþeodnes"
+msgstr "Niƿe Englisc (on Scaƿes stæfrofe) Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:1620
@@ -498,7 +498,6 @@ msgstr "Norðisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2346
-#, fuzzy
 msgid "Old English Translation"
 msgstr "Englisc Geþeodnes"
 
@@ -554,9 +553,8 @@ msgstr "Sƿeonisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2717
-#, fuzzy
 msgid "Turkish Translation"
-msgstr "Turkiscu Geþeodnes"
+msgstr "Turkisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2739
@@ -566,7 +564,7 @@ msgstr ""
 #. [about]
 #: data/core/about.cfg:2752
 msgid "Vietnamese Translation"
-msgstr ""
+msgstr "Fietnamisc Geþeodnes"
 
 #. [about]
 #: data/core/about.cfg:2771
@@ -670,9 +668,8 @@ msgstr ""
 #: data/core/macros/ai_controller.cfg:320
 #: data/core/macros/ai_controller.cfg:709
 #: data/core/macros/ai_controller.cfg:800
-#, fuzzy
 msgid "Back"
-msgstr "Bæc"
+msgstr ""
 
 #. [protect]
 #: data/core/macros/ai_controller.cfg:201
@@ -916,7 +913,7 @@ msgstr ""
 #. [object]: id={ID}
 #: data/core/macros/items.cfg:423
 msgid "Ring of Slowness"
-msgstr ""
+msgstr "Lætnesse Hring"
 
 #. [object]: id={ID}
 #: data/core/macros/items.cfg:426
@@ -944,20 +941,20 @@ msgstr ""
 
 #: data/core/macros/items.cfg:514
 msgid "Should $unit.name pick up the trident?"
-msgstr ""
+msgstr "Sceal $unit.name þone þreotind niman?"
 
 #: data/core/macros/items.cfg:514
 msgid "storm trident^Leave it"
-msgstr ""
+msgstr "Hine læfan"
 
 #: data/core/macros/items.cfg:514
 msgid "storm trident^Take it"
-msgstr ""
+msgstr "Hine niman"
 
 #. [object]
 #: data/core/macros/items.cfg:516
 msgid "Storm Trident"
-msgstr ""
+msgstr "Stormes Þreotind"
 
 #. [object]
 #: data/core/macros/items.cfg:519
@@ -1570,7 +1567,7 @@ msgstr ""
 #. [color_range]: id=2
 #: data/core/team-colors.cfg:32 data/core/team-colors.cfg:89
 msgid "Blue"
-msgstr "Blaƿ"
+msgstr "Hæƿen"
 
 #. [color_range]: id=green
 #. [color_range]: id=3
@@ -1578,12 +1575,11 @@ msgstr "Blaƿ"
 msgid "Green"
 msgstr "Grene"
 
-# TODO: try to find an English word for this...
 #. [color_range]: id=purple
 #. [color_range]: id=4
 #: data/core/team-colors.cfg:44 data/core/team-colors.cfg:101
 msgid "Purple"
-msgstr "Purpul"
+msgstr "Basu"
 
 #. [color_range]: id=black
 #. [color_range]: id=5
@@ -1601,7 +1597,7 @@ msgstr "Brun"
 #. [color_range]: id=7
 #: data/core/team-colors.cfg:62 data/core/team-colors.cfg:107
 msgid "Orange"
-msgstr "Geoluhread"
+msgstr "Geoluread"
 
 #. [color_range]: id=white
 #. [color_range]: id=8
@@ -1609,12 +1605,11 @@ msgstr "Geoluhread"
 msgid "White"
 msgstr "Hƿit"
 
-# I guess we can call it 'blue-green'...
 #. [color_range]: id=teal
 #. [color_range]: id=9
 #: data/core/team-colors.cfg:74 data/core/team-colors.cfg:131
 msgid "Teal"
-msgstr "Blaƿgrene"
+msgstr "Grenehæƿen"
 
 #. [language]
 #: data/english.cfg:3
@@ -1628,15 +1623,14 @@ msgstr ""
 
 #. [language]
 #: data/english.cfg:5
-#, fuzzy
 msgid "Hard"
-msgstr "Heard"
+msgstr "Earfoðlic"
 
 #. [language]
 #: data/english.cfg:6
 #, fuzzy
 msgid "Nightmare"
-msgstr "Ælfadl"
+msgstr "Sƿiðe earfoð"
 
 #. [language]
 #: data/english.cfg:11
@@ -1696,7 +1690,7 @@ msgstr ""
 #: data/english.cfg:27
 #, fuzzy
 msgid "$name Lake"
-msgstr "$name|es Lagu"
+msgstr "$name Lagu"
 
 #. [language]
 #: data/english.cfg:28
@@ -1806,7 +1800,7 @@ msgstr "stice"
 #. [language]
 #: data/english.cfg:49
 msgid "impact"
-msgstr "gegrind"
+msgstr "dynt"
 
 #. [language]
 #: data/english.cfg:50
@@ -1898,9 +1892,8 @@ msgstr ""
 
 #. [tip]
 #: data/hardwired/tips.cfg:13
-#, fuzzy
 msgid "<i>― King Konrad, 536YW</i>"
-msgstr "<i>― Cyning Konrad, 536YW</i>"
+msgstr "<i>― Konrad Cyning, 536ǷG</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:16
@@ -1945,7 +1938,7 @@ msgstr ""
 #: data/hardwired/tips.cfg:29 data/hardwired/tips.cfg:105
 #: data/hardwired/tips.cfg:213 data/hardwired/tips.cfg:225
 msgid "<i>― High Lord Kalenz, 470YW</i>"
-msgstr ""
+msgstr "<i>― Kalenz Heah Hlaford, 470ǷG</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:32
@@ -2161,9 +2154,8 @@ msgstr ""
 
 #. [tip]
 #: data/hardwired/tips.cfg:117
-#, fuzzy
 msgid "<i>― Meneldur, 123YW</i>"
-msgstr "<i>― Meneldur, 123YW</i>"
+msgstr "<i>― Meneldur, 123ǷG</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:120
@@ -2306,9 +2298,8 @@ msgstr ""
 
 #. [tip]
 #: data/hardwired/tips.cfg:185
-#, fuzzy
 msgid "<i>― Queen Li’sar, 528YW</i>"
-msgstr "<i>― Cyninge Li’sar, 528YW</i>"
+msgstr "<i>― Li’sar Cyninge, 528ǷG</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:188
@@ -2388,7 +2379,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:221 data/hardwired/tips.cfg:233
 msgid "<i>― Lord Hamel of Knalga</i>"
-msgstr ""
+msgstr "<i>― Knalgan Hamel Hlaford</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:224
@@ -2467,7 +2458,7 @@ msgstr ""
 
 #: data/lua/wml/objectives.lua:53
 msgid "Notes:"
-msgstr "Notas:"
+msgstr "Geƿritu:"
 
 #: data/lua/wml/objectives.lua:71
 msgid "(%d turns left)"
@@ -2502,6 +2493,7 @@ msgstr ""
 msgid "very long"
 msgstr "oferfeorfeoht"
 
+# TODO: perhaps reconsider this translation
 #. [language]
 #: data/scenario-test.cfg:3158
 msgid "electrical"
@@ -2717,7 +2709,7 @@ msgstr ""
 
 #: src/actions.cpp:2715
 msgid "Ambushed!"
-msgstr "Gesæted!"
+msgstr "Besætod!"
 
 #: src/actions.cpp:2722
 msgid "Failed teleport! Exit not empty"
@@ -2746,7 +2738,6 @@ msgid "Part of 'Units sighted! (...)' sentence^1 enemy"
 msgid_plural "$enemies enemy"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: src/actions.cpp:2777
 msgid "Units sighted! ($friendphrase, $enemyphrase)"
@@ -3065,7 +3056,6 @@ msgid "Are you sure you want to remove the following installed add-on?"
 msgid_plural "Are you sure you want to remove the following installed add-ons?"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: src/addon/manager.cpp:1442
 msgid ""
@@ -3076,28 +3066,24 @@ msgid_plural ""
 "information stored locally, and will not be removed:"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: src/addon/manager.cpp:1452
 msgid "The following add-on could not be deleted properly:"
 msgid_plural "The following add-ons could not be deleted properly:"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: src/addon/manager.cpp:1459
 msgid "Add-on Deleted"
 msgid_plural "Add-ons Deleted"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: src/addon/manager.cpp:1461
 msgid "The following add-on was successfully deleted:"
 msgid_plural "The following add-ons were successfully deleted:"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: src/attack_prediction_display.cpp:105 src/attack_prediction_display.cpp:237
 msgid "Attacker"
@@ -3241,7 +3227,7 @@ msgstr ""
 
 #: src/dialogs.cpp:609
 msgid "Date"
-msgstr ""
+msgstr "Tælmearc"
 
 #: src/dialogs.cpp:626 src/multiplayer_create.cpp:115
 msgid "Load Game"
@@ -3347,7 +3333,7 @@ msgstr ""
 
 #: src/game_controller.cpp:1077 src/game_controller_abstract.cpp:99
 msgid "The Battle for Wesnoth"
-msgstr "Þæt Ƿig for Ƿesnoþ"
+msgstr "Þæt Ƿig ymbe Ƿesnoþ"
 
 #: src/game_controller.cpp:1196
 msgid "The following add-on had errors and could not be loaded:"
@@ -3389,11 +3375,11 @@ msgstr ""
 
 #: src/gui/dialogs/lobby/lobby_data.cpp:205 src/multiplayer_lobby.cpp:447
 msgid "Unknown era: $era_id"
-msgstr "Ungecnaƿenu ieldu: $era_id"
+msgstr "Uncuþ ieldu: $era_id"
 
 #: src/gui/dialogs/lobby/lobby_data.cpp:210 src/multiplayer_lobby.cpp:451
 msgid "Unknown era"
-msgstr "Ungecnaƿenu ieldu"
+msgstr "Uncuþ ieldu"
 
 #: src/gui/dialogs/lobby/lobby_data.cpp:266 src/multiplayer_lobby.cpp:513
 msgid "Remote scenario"
@@ -3437,7 +3423,6 @@ msgid "none"
 msgstr "nan"
 
 #: src/gui/dialogs/lobby_player_info.cpp:98
-#, fuzzy
 msgid "In game:"
 msgstr "On gamene:"
 
@@ -3661,7 +3646,7 @@ msgstr ""
 
 #: src/menu_events.cpp:489
 msgid "More >"
-msgstr "Mara >"
+msgstr "Ma >"
 
 #: src/menu_events.cpp:507
 msgid "scenario settings^Leader"
@@ -3746,7 +3731,6 @@ msgid "unit^Gold"
 msgid_plural "Gold"
 msgstr[0] "Gold"
 msgstr[1] "Gold"
-msgstr[2] "Gold"
 
 #: src/menu_events.cpp:728
 msgid "You have no units available to recruit."
@@ -3815,7 +3799,7 @@ msgstr ""
 
 #: src/menu_events.cpp:1538
 msgid "Race"
-msgstr ""
+msgstr "Cynn"
 
 #: src/menu_events.cpp:1562
 msgid "Create Unit (Debug!)"
@@ -3907,7 +3891,7 @@ msgstr ""
 #: src/menu_events.cpp:2341 src/menu_events.cpp:2343 src/menu_events.cpp:2370
 #: src/menu_events.cpp:2372 src/menu_events.cpp:2374 src/menu_events.cpp:2388
 msgid "<nickname>"
-msgstr "<eacanama>"
+msgstr "<brucendnama>"
 
 #: src/menu_events.cpp:2336
 msgid "Unban a user. He does not have to be in the game but on the server."
@@ -4273,9 +4257,7 @@ msgstr ""
 msgid "Switched domain: '$domain' to level: '$level'."
 msgstr ""
 
-# Should we append a dative -e to what's inside of $receiver?
 #: src/menu_events.cpp:2767
-#, fuzzy
 msgid "whisper to $receiver"
 msgstr "hƿisprian to $receiver"
 
@@ -4343,7 +4325,7 @@ msgstr ""
 
 #: src/menu_events.cpp:2987
 msgid "setting $var to $value"
-msgstr "setende $var to $value"
+msgstr "settende $var to $value"
 
 #: src/menu_events.cpp:3001
 msgid "requesting information for user $nick"
@@ -4664,7 +4646,7 @@ msgstr ""
 
 #: src/multiplayer_connect.cpp:1525
 msgid "Empty"
-msgstr "Æmttig"
+msgstr "Æmettig"
 
 #: src/multiplayer_connect.cpp:1678
 msgid "Cannot find era $era"
@@ -4855,10 +4837,8 @@ msgid "Action bonus: "
 msgstr ""
 
 #: src/multiplayer_create.cpp:423
-#, fuzzy
-#| msgid "Village"
 msgid "Village gold: "
-msgstr "Þorp"
+msgstr "Þorpes gold:"
 
 #: src/multiplayer_create.cpp:429
 msgid "Experience modifier: "
@@ -4878,7 +4858,7 @@ msgstr ""
 
 #: src/multiplayer_lobby.cpp:159
 msgid " (Unknown Era)"
-msgstr " (Ungecnaƿenu Ieldu)"
+msgstr " (Uncuþ Ieldu)"
 
 #: src/multiplayer_lobby.cpp:552 src/multiplayer_lobby.cpp:891
 msgid "Password Required"
@@ -4922,7 +4902,7 @@ msgstr ""
 
 #: src/multiplayer_lobby.cpp:749
 msgid "Friends in game"
-msgstr ""
+msgstr "Friend on gamene"
 
 #: src/multiplayer_lobby.cpp:750
 msgid "Search:"
@@ -5010,7 +4990,6 @@ msgid "multiplayer_starting_gold^Gold"
 msgid_plural "multiplayer_starting_gold^Gold"
 msgstr[0] "Gold"
 msgstr[1] "Gold"
-msgstr[2] "Gold"
 
 #: src/network.cpp:109
 msgid "invalid network handle"
@@ -5245,7 +5224,7 @@ msgstr ""
 
 #: src/reports.cpp:195
 msgid "Race: "
-msgstr ""
+msgstr "Cynn: "
 
 #: src/reports.cpp:237
 msgid "Level: "
@@ -5542,7 +5521,6 @@ msgid "$error, value '$value', previous '$previous_value' at $pos"
 msgstr ""
 
 #: src/serialization/parser.cpp:366
-#, fuzzy
 msgid "$error, value '$value' at $pos"
 msgstr "$error, ƿeorþ '$value' æt $pos"
 
@@ -5799,7 +5777,6 @@ msgstr ""
 #~ msgid "Lord"
 #~ msgstr "Hlaford"
 
-#~| msgid "Hard"
 #~ msgid "(Hard)"
 #~ msgstr "(Heard)"
 
